[package]
name = "homography-viz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
homography = { version = "0.1.0", path = "../homography", features = [
    "arrsac-sc",
] }
cv-core = "0.15.0"
opencv = { version = "0.61.3", features = ["clang-runtime"], optional = true }
nalgebra = "0.30.0"
bevy = "0.5"
bevy_egui = "0.9.0"
itertools = "0.10.1"
rand = "0.8.4"
rand_distr = "0.4.2"
futures-lite = "1.12.0"

[[bin]]
name = "demo"
path = "src/main.rs"
