[package]
name = "homography"
version = "0.1.0"
edition = "2021"

[dependencies]
arrsac = { version = "0.9.0", optional = true }
cv-core = "0.15.0"
derive_more = "0.99.16"
eyre = "0.6.5"
nalgebra = "0.29.0"
itertools = "0.10.1"
rand = { version = "0.8.4", optional = true }
rand_pcg = { version = "0.3.1", optional = true }
sample-consensus = "1.0.2"

[dev-dependencies]
approx = "0.5.0"
rand = "0.8.4"
criterion = "0.2"
test-utils = { version = "0.1.0", path = "../test-utils" }

[[bench]]
name = "bench_kernel"
harness = false

[features]
arrsac-sc = ["arrsac", "rand", "rand_pcg"]
