[package]
name = "homography"
version = "0.1.0"
edition = "2021"

[dependencies]
arrsac = { version = "0.9.0", optional = true }
cv-core = "0.15.0"
derive_more = "0.99.16"
eyre = "0.6.5"
nalgebra = "0.29.0"
itertools = "0.10.1"
rand = { version = "0.8.4", optional = true }
rand_pcg = { version = "0.3.1", optional = true }
sample-consensus = "1.0.2"

[dev-dependencies]
approx = "0.5.0"
clap = "2.34.0"
rand = "0.8.4"
criterion = "0.3"
test-utils = { version = "0.1.0", path = "../test-utils" }
akaze = {version = "0.7.0", git = "https://github.com/rust-cv/cv"}
space = "0.17.0"
bitarray = { version = "0.9.0", features = ["space"] }
log = "0.4.14"
eight-point = "0.8.0"
cv-pinhole = "0.6.0"
pretty_env_logger = "0.4.0"

[[bench]]
name = "bench_kernel"
harness = false

[features]
arrsac-sc = ["arrsac", "rand", "rand_pcg"]
